@@ -1,55 +1,0 @@
-.wall-page {
-  .wall-note-form {
-    @extend .col-md-12;
-
-    margin: 0;
-    height: 140px;
-    background: #F9F9F9;
-    position: fixed;
-    bottom: 0px;
-    padding: 3px;
-    padding-bottom: 25px;
-    border: 1px solid #DDD;
-  }
-
-  .notes {
-    margin-bottom: 160px;
-    background: #FFE;
-    border: 1px solid #EED;
-
-    > li {
-      @extend .clearfix;
-      border-bottom: 1px solid #EED;
-      padding: 10px;
-    }
-
-    .wall-author {
-      color: #666;
-      float: left;
-      font-size: 12px;
-      width: 120px;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-    }
-
-    .wall-text {
-      border-left: 1px solid #CCC;
-      margin-left: 10px;
-      padding-left: 10px;
-      float: left;
-      width: 75%;
-    }
-
-    .wall-file {
-      margin-left: 8px;
-      background: #EEE;
-    }
-
-    abbr {
-      float: right;
-      color: #AAA;
-      border: none;
-    }
-  }
-}
