@@ -3,12 +3,9 @@ class NoteObserver < BaseObserver
     notification.new_note(note)
 
     # Skip system notes, like status changes and cross-references.
-    # Skip wall notes to prevent spamming of dashboard
-    if note.noteable_type.present? && !note.system
+    unless note.system
       event_service.leave_note(note, note.author)
-    end
 
-    unless note.system?
       # Create a cross-reference note if this Note contains GFM that names an
       # issue, merge request, or commit.
       note.references.each do |mentioned|
