@@ -36,10 +36,6 @@
     = nav_link(controller: :wikis) do
       = link_to 'Wiki', project_wiki_path(@project, :home)
 
-  - if project_nav_tab? :wall
-    = nav_link(controller: :walls) do
-      = link_to 'Wall', project_wall_path(@project)
-
   - if project_nav_tab? :snippets
     = nav_link(controller: :snippets) do
       = link_to 'Snippets', project_snippets_path(@project)
