@@ -1,9 +1,0 @@
-New message on the project wall <%= @note.project %>
-
-<%= url_for(project_wall_url(@note.project, anchor: "note_#{@note.id}")) %>
-
-
-<%= @note.author_name %>
-
-<%= @note.note %>
-
