@@ -74,13 +74,6 @@
                   %span.descr Pages for project documentation
 
             .form-group
-              = f.label :wall_enabled, "Wall", class: 'control-label'
-              .col-sm-10
-                .checkbox
-                  = f.check_box :wall_enabled
-                  %span.descr Simple chat system for broadcasting inside project
-
-            .form-group
               = f.label :snippets_enabled, "Snippets", class: 'control-label'
               .col-sm-10
                 .checkbox
